--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Product App</title>
     <!-- Bootswatch Cosmo Theme -->
+    <!-- Utilizamos Bootswatch que utiliza la misma sintaxis de Bootstrap pero con otros colores. Link a su cdn-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/cosmo/bootstrap.min.css">
 
     <!-- Custom CSS -->
@@ -36,10 +37,10 @@
                         </div>
                         <div class="form-group">
                             <input type="number" id="price" step="0.01" placeholder="Product Price"
-                                class="form-control">
+                                class="form-control"> <!--step para que guarde los números con los decimales-->
                         </div>
                         <div class="form-group">
-                            <input type="number" id="year" min="1900" max="2099" step="1" value="2018"
+                            <input type="number" id="year" min="1900" max="2099" step="1" value="2018" placeholder="Year Product"
                                 class="form-control">
                         </div>
                         <input type="submit" value="Save" class="btn btn-primary btn-block">
@@ -48,6 +49,7 @@
             </div>
 
             <!-- PRODUCTS LIST -->
+            <!-- lo llenamos con JS-->
             <div id="product-list" class="col-md-8"></div>
         </div>
     </div>
